# ZombieLegacy

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  Zombie.cbp  Zombie.depend  Zombie.sln  Zombie.vcxproj  Zombie.vcxproj.filters  aibehavior.cpp  aibehavior.h  aiplayer.cpp  aiplayer.h  aiunitmanager.h  auxiliary.cpp  auxiliary.h  blood.cpp  blood.h  building.h  buildingdraw.h  buildings.mif  buildings.txt  buildings_subset.mif  buildingssubset.mif  bullet.h  car.h  caranimation.cpp  caranimation.h  color.h  drawweaponobject.cpp  drawweaponobject.h  gamefont.cpp  gamefont.h  gamesound.cpp  gamesound.h  gamesprite.cpp  gamesprite.h  graphicobject.h  (+66 more)
Box2D/: CMakeLists.txt  README.txt
Spark/: CMakeLists.txt  README.txt
Spark/src/Core/: SPK_ArrayBuffer.h  SPK_BufferHandler.cpp  SPK_BufferHandler.h  SPK_DEF.cpp  SPK_Emitter.cpp  SPK_Emitter.h  SPK_Factory.cpp  SPK_Factory.h  SPK_Group.cpp  SPK_Group.h  SPK_Interpolator.cpp  SPK_Interpolator.h  SPK_Model.cpp  SPK_Model.h  SPK_Modifier.cpp  SPK_Modifier.h  SPK_Particle.cpp  SPK_Particle.h  SPK_Pool.h  SPK_Registerable.cpp  SPK_Registerable.h  SPK_Renderer.cpp  SPK_Renderer.h  SPK_System.cpp  SPK_System.h  SPK_Transformable.cpp  SPK_Transformable.h  SPK_Vector3D.cpp  SPK_Vector3D.h  SPK_Zone.cpp  SPK_Zone.h
Spark/src/Extensions/Emitters/: SPK_NormalEmitter.cpp  SPK_NormalEmitter.h  SPK_RandomEmitter.cpp  SPK_RandomEmitter.h  SPK_SphericEmitter.cpp  SPK_SphericEmitter.h  SPK_StraightEmitter.cpp  SPK_StraightEmitter.h
Spark/src/Extensions/Modifiers/: SPK_Collision.cpp  SPK_Collision.h  SPK_Destroyer.cpp  SPK_Destroyer.h  SPK_LinearForce.cpp  SPK_LinearForce.h  SPK_ModifierGroup.cpp  SPK_ModifierGroup.h  SPK_Obstacle.cpp  SPK_Obstacle.h  SPK_PointMass.cpp  SPK_PointMass.h  SPK_Vortex.cpp  SPK_Vortex.h
Spark/src/Extensions/Renderers/: SPK_LineRendererInterface.h  SPK_Oriented3DRendererInterface.cpp  SPK_Oriented3DRendererInterface.h  SPK_PointRendererInterface.h  SPK_QuadRendererInterface.cpp  SPK_QuadRendererInterface.h
Spark/src/Extensions/Zones/: SPK_AABox.cpp  SPK_AABox.h  SPK_Cylinder.cpp  SPK_Cylinder.h  SPK_Line.cpp  SPK_Line.h  SPK_Plane.cpp  SPK_Plane.h  SPK_Point.cpp  SPK_Point.h  SPK_Ring.cpp  SPK_Ring.h  SPK_Sphere.cpp  SPK_Sphere.h
Spark/src/RenderingAPIs/OpenGL/: SPK_GLExtHandler.cpp  SPK_GLExtHandler.h  SPK_GLLineRenderer.cpp  SPK_GLLineRenderer.h  SPK_GLLineTrailRenderer.cpp  SPK_GLLineTrailRenderer.h  SPK_GLPointRenderer.cpp  SPK_GLPointRenderer.h  SPK_GLQuadRenderer.cpp  SPK_GLQuadRenderer.h  SPK_GLRenderer.cpp  SPK_GLRenderer.h
Test/: CMakeLists.txt
Test/src/: const_string.hpp  test.cpp
data/: building.fra.glsl  building.ver.glsl  buildings_subset.mif  crossroads.xml  frictions.txt  game.fra.glsl  game.ver.glsl  gameshader.fra.glsl  gameshader.ver.glsl  gui.fra.glsl  gui.ver.glsl  housesFME.mif  karta.mif  map.json  map.xml  map_backup.xml  maps.xml  particle.fra.glsl  particle.ver.glsl  roads.mif  roadsFME.mif  water.fra.glsl  water.ver.glsl  zombie.json  zombie.xml
data/cars/: car.json
data/settings/: settings.json
data/settings/missiles/: missile.json
data/settings/units/: human.json  zombie.json
data/settings/weapons/: handgun.json  missile_launcher.json  zombie_fist.json
jsoncpp/: CMakeLists.txt  README.md
jsoncpp/src/json/: json.h
src/: CMakeLists.txt  actionhandler.h  aibehavior.h  aiplayer.cpp  aiplayer.h  animation.cpp  animation.h  array.h  auxiliary.cpp  auxiliary.h  blood.cpp  blood.h  box2ddef.h  building.h  building2d.cpp  building2d.h  buildingdraw.h  buildingproperties.h  buildingshader.cpp  buildingshader.h  bullet.h  car.cpp  car.h  car2d.cpp  car2d.h  caranimation.cpp  caranimation.h  carproperties.h  closestraycastcallback.h  contactlistener.cpp  contactlistener.h  datainterface.h  device.h  drawbuildings.cpp  drawbuildings.h  drawweaponobject.cpp  drawweaponobject.h  driver.h  emitter.h  emptyplayer.h  (+124 more)
