CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Spark)

# Source files.
SET(SOURCES_SPARK
	src/Core/SPK_ArrayBuffer.h
	src/Core/SPK_Buffer.h
	src/Core/SPK_BufferHandler.cpp
	src/Core/SPK_BufferHandler.h
	src/Core/SPK_DEF.cpp
	src/Core/SPK_DEF.h
	src/Core/SPK_Emitter.cpp
	src/Core/SPK_Emitter.h
	src/Core/SPK_Factory.cpp
	src/Core/SPK_Factory.h
	src/Core/SPK_Group.cpp
	src/Core/SPK_Group.h
	src/Core/SPK_Interpolator.cpp
	src/Core/SPK_Interpolator.h
	src/Core/SPK_Model.cpp
	src/Core/SPK_Model.h
	src/Core/SPK_Modifier.cpp
	src/Core/SPK_Modifier.h
	src/Core/SPK_Particle.cpp
	src/Core/SPK_Particle.h
	src/Core/SPK_Pool.h
	src/Core/SPK_Registerable.cpp
	src/Core/SPK_Registerable.h
	src/Core/SPK_RegWrapper.h
	src/Core/SPK_Renderer.cpp
	src/Core/SPK_Renderer.h
	src/Core/SPK_System.cpp
	src/Core/SPK_System.h
	src/Core/SPK_Transformable.cpp
	src/Core/SPK_Transformable.h
	src/Core/SPK_Vector3D.cpp
	src/Core/SPK_Vector3D.h
	src/Core/SPK_Zone.cpp
	src/Core/SPK_Zone.h
	src/Extensions/Emitters/SPK_NormalEmitter.cpp
	src/Extensions/Emitters/SPK_NormalEmitter.h
	src/Extensions/Emitters/SPK_RandomEmitter.cpp
	src/Extensions/Emitters/SPK_RandomEmitter.h
	src/Extensions/Emitters/SPK_SphericEmitter.cpp
	src/Extensions/Emitters/SPK_SphericEmitter.h
	src/Extensions/Emitters/SPK_StaticEmitter.h
	src/Extensions/Emitters/SPK_StraightEmitter.cpp
	src/Extensions/Emitters/SPK_StraightEmitter.h
	src/Extensions/Modifiers/SPK_Collision.cpp
	src/Extensions/Modifiers/SPK_Collision.h
	src/Extensions/Modifiers/SPK_Destroyer.cpp
	src/Extensions/Modifiers/SPK_Destroyer.h
	src/Extensions/Modifiers/SPK_LinearForce.cpp
	src/Extensions/Modifiers/SPK_LinearForce.h
	src/Extensions/Modifiers/SPK_ModifierGroup.cpp
	src/Extensions/Modifiers/SPK_ModifierGroup.h
	src/Extensions/Modifiers/SPK_Obstacle.cpp
	src/Extensions/Modifiers/SPK_Obstacle.h
	src/Extensions/Modifiers/SPK_PointMass.cpp
	src/Extensions/Modifiers/SPK_PointMass.h
	src/Extensions/Modifiers/SPK_Rotator.h
	src/Extensions/Modifiers/SPK_Vortex.cpp
	src/Extensions/Modifiers/SPK_Vortex.h
	src/Extensions/Renderers/SPK_LineRendererInterface.h
	src/Extensions/Renderers/SPK_Oriented2DRendererInterface.h
	src/Extensions/Renderers/SPK_Oriented3DRendererInterface.cpp
	src/Extensions/Renderers/SPK_Oriented3DRendererInterface.h
	src/Extensions/Renderers/SPK_PointRendererInterface.h
	src/Extensions/Renderers/SPK_QuadRendererInterface.cpp
	src/Extensions/Renderers/SPK_QuadRendererInterface.h
	src/Extensions/Zones/SPK_AABox.cpp
	src/Extensions/Zones/SPK_AABox.h
	src/Extensions/Zones/SPK_Cylinder.cpp
	src/Extensions/Zones/SPK_Cylinder.h
	src/Extensions/Zones/SPK_Line.cpp
	src/Extensions/Zones/SPK_Line.h
	src/Extensions/Zones/SPK_Plane.cpp
	src/Extensions/Zones/SPK_Plane.h
	src/Extensions/Zones/SPK_Point.cpp
	src/Extensions/Zones/SPK_Point.h
	src/Extensions/Zones/SPK_Ring.cpp
	src/Extensions/Zones/SPK_Ring.h
	src/Extensions/Zones/SPK_Sphere.cpp
	src/Extensions/Zones/SPK_Sphere.h
	src/RenderingAPIs/OpenGL/SPK_GLExtHandler.cpp
	src/RenderingAPIs/OpenGL/SPK_GLExtHandler.h
	src/RenderingAPIs/OpenGL/SPK_GLLineRenderer.cpp
	src/RenderingAPIs/OpenGL/SPK_GLLineRenderer.h
	src/RenderingAPIs/OpenGL/SPK_GLLineTrailRenderer.cpp
	src/RenderingAPIs/OpenGL/SPK_GLLineTrailRenderer.h
	src/RenderingAPIs/OpenGL/SPK_GLPointRenderer.cpp
	src/RenderingAPIs/OpenGL/SPK_GLPointRenderer.h
	src/RenderingAPIs/OpenGL/SPK_GLQuadRenderer.cpp
	src/RenderingAPIs/OpenGL/SPK_GLQuadRenderer.h
	src/RenderingAPIs/OpenGL/SPK_GLRenderer.cpp
	src/RenderingAPIs/OpenGL/SPK_GLRenderer.h
	src/RenderingAPIs/OpenGL/SPK_GL_DEF.h
	src/SPK.h
	src/SPK_GL.h	
)
# End of source files.

FIND_PACKAGE(OpenGL REQUIRED)

ADD_LIBRARY(Spark ${SOURCES_SPARK})
